
- There now is a custom proxy class for instances of ``datetime.date`` and
  ``datetime.datetime``, which takes away the need to manually convert these
  instances before using them from Objective-C (such as using an 
  ``NSDateFormatter``)

  using an ``NSKeyedArchiver``. 

- Objective-C classes that support the ``NSCopying`` protocol can now be
  copied using ``copy.copy`` as well.

- Objective-C classes that support the ``NSCoding`` protocol can now be
  copied using ``copy.deepcopy``.

- Pure Python objects now support the ``NSCopying`` protocol.

- A new decorator: ``objc.namedselector`` for overriding the Objective-C
  selector. Usage::

  	class MyObject (NSObject):

	    @objc.namedselector("foo:bar:")
	    def foobar(self, foo, bar):
	       pass

- A number of new type signature values were added. These are not present
  in the Objective-C runtime, but are used to more precisely describe the
  type of some arguments. 

  The new values are:

  * _C_UNICHAR:   A "UniChar" value in Objective-C

  * _C_NSBOOL:    A "BOOL" value in Objective-C

  * _C_CHAR_AS_INT: A "char" in Objective-C that is used as a number

  * _C_CHAR_AS_TEXT: A "char" in Objective-C that is used as a character

  PyObjC will automaticly translate these values into the correct Objective-C
  type encoding when communicating with the Objective-C runtime, making this
  change transparent to anyone but Python users.

  NOTE: _C_CHR is of course still supported, with the same semi-schizofrenic
  behaviour as always.

  NOTE2: The non-standard metadata extensions we used before to indicate
  that a C short is used as a unicode string are no longer supported.

- Output arguments are no longer optional. They must be specified both in 
  method implementations and method calls. In PyObjC 2.0 they were optional,
  but raised a deprecation warning, for backward compatiblity with PyObjC 1.x.
  
  The backward compatibility code was removed because it made code more